# qbittui

./: .gitignore  Cargo.toml  LICENSE  README.md  qbittui_config.json  test.rs
.github/workflows/: rust-release.yml
src/: api.rs  app.rs  config.rs  event.rs  main.rs  ui.rs  utils.rs
